--- a/rest-assured/pom.xml
+++ b/rest-assured/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ontestautomation.apitesting</groupId>
-    <artifactId>RestAssured</artifactId>
+    <artifactId>rest-assured</artifactId>
     <version>1.0-SNAPSHOT</version>
     <description>Examples, exercises and answers for REST Assured - part of my API testing masterclass</description>
     <properties>
