Update rest-assured, wiremock, lombok versions

--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -19,6 +19,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
     <pact.version>4.0.2</pact.version>
+    <lombok.version>1.18.18</lombok.version>
   </properties>
 
   <dependencies>
@@ -30,6 +31,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
     </dependency>
 
     <dependency>
