--- a/wiremock/pom.xml
+++ b/wiremock/pom.xml
@@ -10,9 +10,9 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <restassured.version>4.3.1</restassured.version>
+        <restassured.version>4.3.3</restassured.version>
         <junit.version>4.13.1</junit.version>
-        <wiremock.version>2.26.3</wiremock.version>
+        <wiremock.version>2.27.2</wiremock.version>
         <slf4j.version>1.7.28</slf4j.version>
     </properties>
     <dependencies>
@@ -30,7 +30,7 @@
         </dependency>
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
-            <artifactId>wiremock-jre8</artifactId>
+            <artifactId>wiremock</artifactId>
             <version>${wiremock.version}</version>
             <scope>test</scope>
         </dependency>
